# ce4302_Project1

./: CMakeLists.txt  main.cpp  mainGUI.sh
Communication/: bus.cpp  bus.h  controlBus.cpp  controlBus.h  messages.h
Data/cache/: cache1.txt  cache2.txt
Data/cpu/: cpu1.txt  cpu2.txt
Data/node1/: cache.txt  cacheActions.txt  cpu.txt  notify.txt
Data/node2/: cache.txt  cacheActions.txt  cpu.txt  notify.txt
Data/node3/: cache.txt  cacheActions.txt  cpu.txt  notify.txt
Data/node4/: cache.txt  cacheActions.txt  cpu.txt  notify.txt
Data/node5/: memory.txt
Data/notifications/: notify1.txt  notify2.txt
Documentación/: diagramClass.html
GUI/: dataAnalyzer.py  dataPrinter.py  display.cpp  display.h  memoryPrinter.py
Tools/: JsonCodeDecode.cpp  JsonCodeDecode.h  fileWriter.cpp  fileWriter.h  observer.cpp  observer.h  randomGenerator.cpp  randomGenerator.h
memory/: mainMemory.cpp  mainMemory.h
processor/: cache.cpp  cache.h  control.cpp  control.h  cpu.cpp  cpu.h  node.cpp  node.h
